--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a href="2026-02-09-1017.html">February 09, 2026 at 10:17 AM<br><span class="date">2026-02-09-1017</span></a></li>
     </ul>
     <footer>
-        Powered by <a href="https://github.com/maxumbra/x-monitor">X Monitor</a> & Clawdbot 🤖
+        Powered by <a href="https://github.com/maxumbra/signal-monitor">Signal Monitor</a>
     </footer>
 </body>
 </html>
