--- a/2026-02-09-1229.html
+++ b/2026-02-09-1229.html
@@ -59,9 +59,10 @@
         
         .stats-line {
             color: var(--text-secondary);
-            font-size: 0.85rem;
+            font-size: 0.75rem;
             margin-top: 12px;
             letter-spacing: 0.02em;
+            white-space: nowrap;
         }
         
         .editorial-cards {
@@ -284,7 +285,7 @@
         <header>
             <h1><a href="https://maxumbra.github.io/signal-monitor/" style="color: inherit; text-decoration: none;">📡 Signal Monitor</a></h1>
             <p class="subtitle">09/02/2026 - 12:29</p>
-            <p class="stats-line">Crypto 32% | AI 25% | Tech 5% | Macro 0% | Other 38%</p>
+            <p class="stats-line">Crypto 32% · AI 25% · Tech 5% · Macro 0% · Other 38%</p>
         </header>
 
         <div class="editorial-cards">
