Add report editorial-latest

--- a/editorial-latest.html
+++ b/editorial-latest.html
@@ -59,9 +59,10 @@
         
         .stats-line {
             color: var(--text-secondary);
-            font-size: 0.85rem;
+            font-size: 0.75rem;
             margin-top: 12px;
             letter-spacing: 0.02em;
+            white-space: nowrap;
         }
         
         .editorial-cards {
@@ -282,17 +283,17 @@
 <body>
     <div class="container">
         <header>
-            <h1>📡 Signal Monitor</h1>
+            <h1><a href="https://maxumbra.github.io/signal-monitor/" style="color: inherit; text-decoration: none;">📡 Signal Monitor</a></h1>
             <p class="subtitle">editorial-latest</p>
-            <p class="stats-line"></p>
+            <p class="stats-line">Crypto 0% · AI 0% · Tech 0% · Macro 0% · Other 0%</p>
         </header>
 
         <div class="editorial-cards">
-            <div class="editorial-card"><strong>Crypto</strong> — Coinbase dominó la conversación post-Super Bowl — su ad dividió opiniones pero generó engagement masivo. Tether diversifica ganancias en 140 inversiones desde agricultura hasta deportes. Umbrel sigue ganando tracción como infraestructura personal.</div>
-            <div class="editorial-card"><strong>AI</strong> — Claude en PowerPoint volándose la barda. OpenClaw sigue generando ruido orgánico — gente reescribiendo sus soul.md y compartiendo resultados. Grok bajo fuego por calidad del modelo.</div>
-            <div class="editorial-card"><strong>Tech</strong> — Elon anuncia pruebas de seguridad para X Chat y promete open source del código. MrBeast adquiere Step (app financiera) — creators entrando a fintech.</div>
-            <div class="editorial-card"><strong>Macro</strong> — Super Bowl como catalizador de narrativa crypto. El mainstream sigue rechazando crypto pero el engagement dice lo contrario.</div>
-            <div class="editorial-card"><strong>Señal del día</strong> — El ad de Coinbase en el Super Bowl fue un test de Rorschach: crypto Twitter lo vio como victoria, el mainstream como cringe. La verdad está en los números de engagement, no en las opiniones.</div>
+            <div class="editorial-card"><strong>Crypto</strong> — LayerZero dominó el timeline con un anuncio masivo: Tether integra su tech en WDK, 0xfoobar lo llama &#39;the most important blockchain since Ethereum&#39;, y Packy McCormick lo valida desde fuera. Goldman Sachs reveló $2.36B en crypto holdings (BTC $1.1B, ETH $1B, XRP $153M, SOL $108M) — la señal institucional más fuerte del año. Base y Coinbase empujan x402 con Stripe para pagos de agentes AI con USDC onchain.</div>
+            <div class="editorial-card"><strong>AI</strong> — Obsidian 1.12 lanza CLI nativo para agentes (OpenClaw, Claude Code, Codex) — 3,500 likes, la intersección knowledge management + AI agents se consolida. Stitch by Google ahora exporta a Figma, validando que vibe design necesita herramientas pro para el polish final. Stripe + x402 para machine payments en Base es la primera implementación seria de agentes pagando onchain.</div>
+            <div class="editorial-card"><strong>Tech</strong> — Jordan Singer resume el zeitgeist: &#39;the layer of abstraction we&#39;ll create software at is deciding how it looks and works — code will never be seen by most&#39;. El shift de code-first a intent-first se acelera con cada herramienta de vibe coding que sale.</div>
+            <div class="editorial-card"><strong>Macro</strong> — a16z reporta que el optimismo de adultos en US toca mínimo histórico. Contraste brutal: Goldman mete $2.36B en crypto mientras Main Street está en su punto más pesimista. El capital institucional apuesta contra el sentimiento popular.</div>
+            <div class="editorial-card"><strong>Señal del día</strong> — Stripe + x402: pagos de agentes AI con USDC onchain via Base. La primera implementación real de machine-to-machine payments usando stablecoins. No es un whitepaper ni un concepto — Stripe lo está construyendo. Esto es infraestructura para la economía de agentes.</div>
         </div>
 
         <footer>
