--- a/2026-02-10-2000.html
+++ b/2026-02-10-2000.html
@@ -444,7 +444,7 @@ goes mainstream this year, 100%</div>
                     <span class="tweet-time">Feb 10, 06:23 PM</span>
                 </div>
                 <div class="tweet-text">15+ years as a designer.
-The only fonts I&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;ll ever need again.</div>
+The only fonts I&#39;ll ever need again.</div>
                 <div class="tweet-media"><img src="https://pbs.twimg.com/media/HA0PQdwXIAAtQlG?format=png&name=small" alt="Tweet media" loading="lazy"></div>
                 <div class="tweet-footer">
                     <div class="tweet-metrics">❤️ 1,100 · 🔁 46 · 💬 30</div>
@@ -486,7 +486,7 @@ Now you can move seamlessly between</div>
                 </div>
                 <div class="tweet-text">Want to build agentic commerce? 
 
-Here&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s your starting point.</div>
+Here&#39;s your starting point.</div>
                 <div class="tweet-media"><img src="https://pbs.twimg.com/media/HAz62quakAAA6ie?format=png&name=small" alt="Tweet media" loading="lazy"></div>
                 <div class="tweet-footer">
                     <div class="tweet-metrics">❤️ 334 · 🔁 30 · 💬 66</div>
@@ -503,7 +503,7 @@ Here&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s
                     </div>
                     <span class="tweet-time">Feb 10, 04:37 PM</span>
                 </div>
-                <div class="tweet-text">If you&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;re trying to setup a team of agents, I built this for you and open sourced it.
+                <div class="tweet-text">If you&#39;re trying to setup a team of agents, I built this for you and open sourced it.
 
 Works right on top of 
 <a href="https://x.com/openclaw" target="_blank" rel="noopener">@openclaw</a>
@@ -552,7 +552,7 @@ and the code will never be seen by most</div>
                 </div>
                 <div class="tweet-text">THE ESSENCE OF GOOD STRATEGY
 
-This is one of the crispest strategy articulations I&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;ve seen. After reading it, it&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s crystal clear what the company&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s aspirations and goals are, what they&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;re trying to accomplish, and what the associated key initiatives are. 
+This is one of the crispest strategy articulations I&#39;ve seen. After reading it, it&#39;s crystal clear what the company&#39;s aspirations and goals are, what they&#39;re trying to accomplish, and what the associated key initiatives are. 
 
 Most startup strategy</div>
                 
