--- a/2026-02-09-2006.html
+++ b/2026-02-09-2006.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X Monitor - 2026-02-09-2006</title>
+    <meta name="theme-color" content="#0f0f0f">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+    <title>Signal Monitor - 2026-02-09-2006</title>
     <style>
         :root {
             --bg-primary: #0f0f0f;
@@ -289,11 +295,11 @@
         </header>
 
         <div class="editorial-cards">
-            <div class="editorial-card"><strong>Crypto</strong> — BTC continues to track software equities with eerie precision — correlation or causation? Meanwhile, the infra layer keeps shipping: onchain eSIMs, ERC-8128 for signed HTTP requests, and Nansen leading the tooling stack. The market is building faster than it&#39;s trading.</div>
-            <div class="editorial-card"><strong>AI</strong> — Agent frameworks are hitting mainstream with ClawdBot and Agent Skills getting real traction. Socratic prompting is the new hot technique from OpenAI/Anthropic engineers. The ai.com domain selling for $70M signals how much capital is chasing the label alone.</div>
-            <div class="editorial-card"><strong>Tech</strong> — Vibe coding is graduating from meme to methodology — YCombinator is now teaching it. QuickClaw shipping a one-tap agent launcher on iOS shows the agent-as-app pattern is real. Aave sitting on $1B idle stablecoins is a sleeping giant waiting for a catalyst.</div>
-            <div class="editorial-card"><strong>Macro</strong> — A suspicious $100K Polymarket bet on a US-Iran strike tonight drew major attention. Whether insider signal or manipulation, prediction markets are becoming the first-mover news wire for geopolitical risk.</div>
-            <div class="editorial-card"><strong>Señal del día</strong> — The BTC-Software ETF correlation going mainstream — if the narrative sticks, it reframes Bitcoin from &#39;digital gold&#39; to &#39;leveraged tech bet&#39;, which changes who buys and why.</div>
+            <div class="editorial-card"><strong>Crypto</strong> — [editorial placeholder]</div>
+            <div class="editorial-card"><strong>AI</strong> — [editorial placeholder]</div>
+            <div class="editorial-card"><strong>Tech</strong> — [editorial placeholder]</div>
+            <div class="editorial-card"><strong>Macro</strong> — [editorial placeholder]</div>
+            <div class="editorial-card"><strong>Señal del día</strong> — [editorial placeholder]</div>
         </div>
 
         <section class="category category-crypto">
@@ -355,7 +361,7 @@ $BTC has been literally mimicking the Software ETF for 5+ years now.</div>
  – smart money tracking, wallet labels, best-in-class onchain intelligence
 • 
 <a href="https://x.com/arkham" target="_blank" rel="noopener">@arkham</a>
- – free Nansen alternative that&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s good enough for 90%+ of traders
+ – free Nansen alternative that&#39;s good enough for 90%+ of traders
 • 
 <a href="https://x.com/glassnode" target="_blank" rel="noopener">@glassnode</a>
  – unbeatable Bitcoin/Ethereum</div>
@@ -449,7 +455,7 @@ Here are 5 prompts that replace both:</div>
                     </div>
                     <span class="tweet-time">Feb 09, 05:47 AM</span>
                 </div>
-                <div class="tweet-text">Tried out Agent Skills today and the results are insane.  Here&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s a before and after comparison of using a `frontend-design` skill  to redesign the UI with
+                <div class="tweet-text">Tried out Agent Skills today and the results are insane.  Here&#39;s a before and after comparison of using a `frontend-design` skill  to redesign the UI with
 
 a simple prompt.</div>
                 <div class="tweet-media"><img src="https://pbs.twimg.com/media/HAsY1-9WEAA2JgZ?format=jpg&name=small" alt="Tweet media" loading="lazy"></div>
@@ -468,11 +474,11 @@ a simple prompt.</div>
                     </div>
                     <span class="tweet-time">Feb 09, 06:56 PM</span>
                 </div>
-                <div class="tweet-text">think i&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;ve got my ClawdBot just about dialed in
+                <div class="tweet-text">think i&#39;ve got my ClawdBot just about dialed in
 
 9:47 AM - &quot;hey clawdbot&quot;
 
-9:47 AM - Clawdbot: &quot;hey, what&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s up&quot;
+9:47 AM - Clawdbot: &quot;hey, what&#39;s up&quot;
 
 9:48 AM - &quot;thinking about building a lead gen automation tool&quot;
 
@@ -497,13 +503,13 @@ a simple prompt.</div>
                 </div>
                 <div class="tweet-text">OpenAI and Anthropic engineers leaked a prompting technique that separates beginners from experts.
 
-It&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s called &quot;Socratic prompting&quot; and it&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s insanely simple.
+It&#39;s called &quot;Socratic prompting&quot; and it&#39;s insanely simple.
 
 Instead of telling the AI what to do, you ask it questions.
 
 My output quality: 6.2/10 → 9.1/10
 
-Here&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s how it works:</div>
+Here&#39;s how it works:</div>
                 
                 <div class="tweet-footer">
                     <div class="tweet-metrics">❤️ 444 · 🔁 56 · 💬 17</div>
@@ -740,5 +746,10 @@ Government insider trading or just a degen gambler?</div>
             <p>Powered by Clawdbot 🤖</p>
         </footer>
     </div>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js').catch(() => {});
+        }
+    </script>
 </body>
 </html>
