--- a/2026-02-10-0800.html
+++ b/2026-02-10-0800.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X Monitor - 2026-02-10-0800</title>
+    <meta name="theme-color" content="#0f0f0f">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+    <title>Signal Monitor - 2026-02-10-0800</title>
     <style>
         :root {
             --bg-primary: #0f0f0f;
@@ -289,11 +295,11 @@
         </header>
 
         <div class="editorial-cards">
-            <div class="editorial-card"><strong>Crypto</strong> — LayerZero reportedly launching its own chain &#39;Zero&#39; with ZK-based execution — another L1 play from an infra team that already owns the bridging layer. Meanwhile, the payments stack is crystallizing fast: Andy&#39;s list reads like a who&#39;s-who of crypto-native rails competing with Visa/Mastercard head-on. Base/Farcaster drama continues but the builders haven&#39;t left.</div>
-            <div class="editorial-card"><strong>AI</strong> — Polymarket partnering with Kaito AI for &#39;attention markets&#39; is the most interesting signal — prediction markets pricing mindshare is a natural next step. Harvey AI hitting $11B at $190M ARR shows legal AI is scaling violently. The AI x Crypto convergence thesis (Bankr, Clanker, OpenClaw, x402) is getting louder with Zeneca calling it a potential new season on Base.</div>
-            <div class="editorial-card"><strong>Tech</strong> — Sparrow Wallet v2.4.0 drops with silent payments support and Codex32 — Bitcoin self-custody tooling keeps maturing quietly. Brian Armstrong tweets &#39;rapid iteration&#39; which tracks with Coinbase&#39;s recent shipping pace.</div>
-            <div class="editorial-card"><strong>Macro</strong> — Safe positioning itself as the &#39;ownership layer&#39; across DeFi verticals (Aave, Polymarket, Morpho) is a quiet power play. Stablecoin yield compression continues — people asking where to find &gt;2.75% on USDC signals the easy money era in DeFi lending is fading.</div>
-            <div class="editorial-card"><strong>Señal del día</strong> — Polymarket x Kaito AI &#39;attention markets&#39; — betting on what captures mindshare, not just outcomes. This is prediction markets eating into the attention economy, and it could reshape how we price narratives in real-time.</div>
+            <div class="editorial-card"><strong>Crypto</strong> — LayerZero dominó el timeline con un anuncio masivo: Tether integra su tech en WDK, 0xfoobar lo llama &#39;the most important blockchain since Ethereum&#39;, y Packy McCormick lo valida desde fuera. Goldman Sachs reveló $2.36B en crypto holdings (BTC $1.1B, ETH $1B, XRP $153M, SOL $108M) — la señal institucional más fuerte del año. Base y Coinbase empujan x402 con Stripe para pagos de agentes AI con USDC onchain.</div>
+            <div class="editorial-card"><strong>AI</strong> — Obsidian 1.12 lanza CLI nativo para agentes (OpenClaw, Claude Code, Codex) — 3,500 likes, la intersección knowledge management + AI agents se consolida. Stitch by Google ahora exporta a Figma, validando que vibe design necesita herramientas pro para el polish final. Stripe + x402 para machine payments en Base es la primera implementación seria de agentes pagando onchain.</div>
+            <div class="editorial-card"><strong>Tech</strong> — Jordan Singer resume el zeitgeist: &#39;the layer of abstraction we&#39;ll create software at is deciding how it looks and works — code will never be seen by most&#39;. El shift de code-first a intent-first se acelera con cada herramienta de vibe coding que sale.</div>
+            <div class="editorial-card"><strong>Macro</strong> — a16z reporta que el optimismo de adultos en US toca mínimo histórico. Contraste brutal: Goldman mete $2.36B en crypto mientras Main Street está en su punto más pesimista. El capital institucional apuesta contra el sentimiento popular.</div>
+            <div class="editorial-card"><strong>Señal del día</strong> — Stripe + x402: pagos de agentes AI con USDC onchain via Base. La primera implementación real de machine-to-machine payments usando stablecoins. No es un whitepaper ni un concepto — Stripe lo está construyendo. Esto es infraestructura para la economía de agentes.</div>
         </div>
 
         <section class="category category-crypto">
@@ -383,7 +389,7 @@ Polygon</div>
                 </div>
                 <div class="tweet-text">
 
-Rumor mill cooks again. LayerZero will be annoucing their own chain &<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;Zero&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>; a &quot;decentralized, multi-core blockchain designed to operate as internet-scale market infrastructure. 
+Rumor mill cooks again. LayerZero will be annoucing their own chain &#39;Zero&#39; a &quot;decentralized, multi-core blockchain designed to operate as internet-scale market infrastructure. 
 
 By using zero-knowledge proofs to decouple execution from verification, Zero replaces</div>
                 <div class="tweet-media"><img src="https://pbs.twimg.com/media/HAzKCNGaAAAdkrM?format=png&name=small" alt="Tweet media" loading="lazy"></div>
@@ -451,7 +457,7 @@ Bitcoin onchain, Lightning, RSK, liquid</div>
                 </div>
                 <div class="tweet-text">AI Legal startup Harvey is raising $200M at an $11B valuation
 
-They&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;ve reached:
+They&#39;ve reached:
 $190M ARR
 1,000 customers
 100,000 lawyers on platform
@@ -473,7 +479,7 @@ Below is their 2025 in review deck:</div>
                     </div>
                     <span class="tweet-time">Feb 09, 10:46 PM</span>
                 </div>
-                <div class="tweet-text">Created a custom slash command &quot;/handover&quot; in Claude Code: When I&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;m ending a Claude session (e.g. context window filling up), I get Claude to generate a &quot;
+                <div class="tweet-text">Created a custom slash command &quot;/handover&quot; in Claude Code: When I&#39;m ending a Claude session (e.g. context window filling up), I get Claude to generate a &quot;
 http://
 HANDOVER.md&quot; document which summarizes everything we did in this session, including decisions, pitfalls, lessons</div>
                 <div class="tweet-media"><img src="https://pbs.twimg.com/media/HAwBvUIaIAA1pMi?format=jpg&name=small" alt="Tweet media" loading="lazy"></div>
@@ -522,7 +528,7 @@ rk/2026/02/10/polymarket-to-offer-attention-markets-in-partnership-with-kaito-ai
 
 The framework is there, and the only thing anyone in crypto can talk about is AI these days
 
-I explore this idea in today&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s newsletter </div>
+I explore this idea in today&#39;s newsletter </div>
                 
                 <div class="tweet-footer">
                     <div class="tweet-metrics">❤️ 147 · 🔁 10 · 💬 78</div>
@@ -645,7 +651,7 @@ sparrowwallet.com/download</div>
                 </div>
                 <div class="tweet-text">What are some apps or protocols where I can still get good APY on my USDC or USDT?
 
-Tell me what you&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;re using.
+Tell me what you&#39;re using.
 
 Should be low-risk and at least match my bank account interest rate of 2.75% lmao</div>
                 <div class="tweet-media"><img src="https://pbs.twimg.com/media/HAu2qLiaAAgb_IA?format=jpg&name=360x360" alt="Tweet media" loading="lazy"><img src="https://pbs.twimg.com/media/HAu2qLlaAAQ_vzz?format=jpg&name=360x360" alt="Tweet media" loading="lazy"></div>
@@ -665,7 +671,7 @@ Should be low-risk and at least match my bank account interest rate of 2.75% lma
                     <span class="tweet-time">Feb 10, 12:34 PM</span>
                 </div>
                 <div class="tweet-text">Think Safe is just a multi-sig? Think bigger.
-It&<a href="https://x.com/hashtag/39" target="_blank" rel="noopener">#39</a>;s the foundational ownership layer powering:
+It&#39;s the foundational ownership layer powering:
 → Protocol Operations
 
 <a href="https://x.com/Aave" target="_blank" rel="noopener">@Aave</a>
@@ -803,5 +809,10 @@ this felt like watching an industry category boundary collapse in realtime .</di
             <p>Powered by Clawdbot 🤖</p>
         </footer>
     </div>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js').catch(() => {});
+        }
+    </script>
 </body>
 </html>
