--- a/weekly/2026-W07.html
+++ b/weekly/2026-W07.html
@@ -49,28 +49,31 @@ h3 { font-size:1.05em; margin-bottom:6px; }
 </head>
 <body>
 <h1>📡 Signal Monitor Weekly</h1>
-<p class="subtitle">2026-W07 — 2026-02-09 to 2026-02-15 — Generated 2026-02-14 18:58</p>
+<p class="subtitle">2026-W07 — 2026-02-09 to 2026-02-15 — Generated 2026-02-14 18:59</p>
 
 <div class="weekly-brief">
 <h2 style="border:none;margin:0 0 8px">Weekly Brief</h2>
-<p>Weekly Intelligence Brief for Crypto/Tech Investor (2026-W07)
+<p>Weekly Intelligence Brief: 2026-W07 (February 9-15)
 
-**Summary**
+A total of 1266 tweets were monitored from 696 accounts, providing valuable insights into the latest developments in AI, cryptocurrency, tech, and stocks.
 
-This week, we monitored 1266 tweets from 696 accounts, covering various topics related to AI, cryptocurrency, DeFi, and tech trends. The most significant themes include the increasing adoption of DeFi by traditional institutions, the rise of yield farming and tranching, and the development of user-friendly and secure financial tools.
+Key Takeaways:
 
-**Key Takeaways**
+1. AI: The rapid progress and adoption of AI technologies are being discussed, with a focus on autonomous coding tools, design canvas for AI agents, and the potential misuse of AI in automation and social media interactions.
+2. Crypto: Institutional investing, DeFi evolution, and technological advancements are driving the conversation, with key themes including institutional adoption, DeFi yield, and security and trust in custody relationships.
+3. OpenClaw: The OpenClaw community is sharing their experiences and insights on using OpenClaw for autonomous agents, highlighting practical tips and battle-tested patterns.
 
-1. **DeFi Adoption**: Traditional institutions are increasingly adopting DeFi solutions, with a focus on yield tranching and partnerships between traditional finance and DeFi.
-2. **Yield Farming**: Yield farming and tranching continue to gain traction, with users exploring innovative ways to optimize their returns.
-3. **Wallet Security**: Wallet security remains a top concern, with users emphasizing the importance of secure storage solutions for cryptocurrencies.
-4. **AI and Crypto**: The intersection of AI and cryptocurrency is becoming increasingly important, with discussions around the potential for AI-powered trading platforms and decentralized finance (DeFi) projects.
+What Matters Most:
 
-**What to Watch Next Week**
+1. Insuring that institutions are adopting AI technologies effectively to avoid potential risks.
+2. Encouraging DeFi projects to prioritize accessibility, security, and utility.
+3. Supporting the development of new tools and standards in OpenClaw.
 
-1. **Coinbase Earnings Report**: Investors are eagerly awaiting Coinbase's quarterly earnings report, which is expected to impact market sentiment.
-2. **New DeFi Projects**: Keep an eye on emerging DeFi projects that aim to address user needs and improve the overall user experience.
-3. **AI-Powered Trading Platforms**: The launch of new AI-powered trading platforms will likely continue to generate interest and discussion</p>
+Next Week's Watchlist:
+
+1. Earnings Reports: Companies will be sharing their financial results in a more engaging way, with some predicting a positive market sentiment.
+2. AI Advancements: New AI models and open-source toolkits will continue to emerge, driving innovation and adoption.
+3. Crypto Regulations: Governments will likely announce new regulations</p>
 </div>
 
 <div class="stats-grid">
@@ -94,34 +97,34 @@ This week, we monitored 1266 tweets from 696 accounts, covering various topics r
 <h2>🧠 Category Analysis</h2>
 <div class="editorial-card">
   <h3 style="color:#8b5cf6">AI</h3>
-  <p>Here's a summary of these AI tweets in 2-3 sentences:
+  <p>Here's a summary of the AI tweets in 2-3 sentences:
 
-The tweets discuss the evolution of AI and its increasing presence in various aspects of life, from UI design to writing articles. They highlight the growing trend of using AI tools for tasks such as workflow encoding, customization playbooks...</p>
+The tweets discuss various aspects of AI, including its potential to automate tasks and create skills, as well as its applications in search, deployment, and product management. The conversation highlights the importance of imitating human beha...</p>
 </div>
 <div class="editorial-card">
   <h3 style="color:#f7931a">CRYPTO</h3>
-  <p>Here's a summary of the tweets in 2-3 sentences:
+  <p>Here is a summary of the tweets in 2-3 sentences:
 
-The tweets discuss various topics related to cryptocurrency, including the importance of on-chain transactions, wallet security, and alternative uses for traditional assets like gold. Some users share their thoughts on the potential of decentraliz...</p>
+The key themes among these CRYPTO tweets revolve around institutional adoption, DeFi evolution, and technological advancements. Coinbase's CEO Brian Armstrong expresses optimism about the company's future growth, while Aave Labs proposes a new fr...</p>
 </div>
 <div class="editorial-card">
   <h3 style="color:#10b981">OPENCLAW</h3>
   <p>Here is a summary of the tweets in 2-3 sentences:
 
-The users are discussing their experience with OpenClaw and sharing their thoughts on its capabilities. They appreciate the tool's ability to help them create plans for improvement, such as curating what they read or implementing changes based on...</p>
+The OpenClaw community is sharing their experiences and successes with the platform, which enables users to create autonomous agents that can manage tasks and workflows. Users are showcasing how they've integrated OpenClaw with other tools like F...</p>
 </div>
 <div class="editorial-card">
   <h3 style="color:#ef4444">STOCKS_MACRO</h3>
-  <p>Here are the summaries of each tweet in 2-3 sentences:
+  <p>Here's a summary of the tweets:
 
-1. @nurijanian: The author found a Reddit thread on PM storytelling to be highly effective and notes that it can lead to shorter meetings, reduced arguments, and faster decision-making.
-2. @xStocksFi: Tokenized equities now offer yield throu...</p>
+The two tweets discuss the upcoming release of new formats for sharing earnings data and the current state of the market. The first tweet suggests that companies are preparing to share their financial results in a more engaging way, while the second tweet confiden...</p>
 </div>
 <div class="editorial-card">
   <h3 style="color:#3b82f6">TECH</h3>
-  <p>Here is a summary of the tweets in 2-3 sentences:
+  <p>Here are 2-3 sentence summaries of each tweet:
 
-The tweets discuss AI, open-source models, and the future of coding. Elon Musk predicts that AI will surpass human logic and no longer need programming languages by December, while others emphasize the importance of designing software with humans...</p>
+1. @BitcoinNewsCom: A new open-source toolkit from Lightning Labs allows AI agents to operate on the Bitcoin Lightning Network, enabling instant micropayments.
+2. @AlexFinn: An open-source model has been released that surpasses existing coding tools...</p>
 </div>
 
 
@@ -175,23 +178,13 @@ Don't just do what everyone else would do anyway, just on rails with an octahedr
 <div class="tweet-card">
   <div class="tweet-rank">#5</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@VitalikButerin</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">67pts</span></div>
-    <div class="tweet-text">This is the right way to "make Ethereum be the home for AI".
-
-Don't just do what everyone else would do anyway, just on rails with an octahedron logo instead of a square or circle or pentagon logo. Ma</div>
-    <a href="https://x.com/VitalikButerin/status/2021594878162157948" target="_blank" class="tweet-link">→ View</a>
-  </div>
-</div>
-<div class="tweet-card">
-  <div class="tweet-rank">#6</div>
-  <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@saylor</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">67pts</span></div>
     <div class="tweet-text">Strategy has acquired 1,142 BTC for ~$90.0 million at ~$78,815 per bitcoin. As of 2/8/2026, we hodl 714,644 $BTC acquired for ~$54.35 billion at ~$76,056 per bitcoin. $MSTR $STRC https://t.co/4X2c81LQ</div>
     <a href="https://x.com/saylor/status/2020846107685695931" target="_blank" class="tweet-link">→ View</a>
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#7</div>
+  <div class="tweet-rank">#6</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@elonmusk</span> <span class="tweet-cat" style="background:#6b7280">other</span> <span class="tweet-score">66pts</span></div>
     <div class="tweet-text">Medicaid data has been open sourced, so the level of fraud is easy to identify. 
@@ -203,7 +196,7 @@ Don't just do what everyone else would do anyway, just on rails with an octahedr
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#8</div>
+  <div class="tweet-rank">#7</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@RobinhoodApp</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">66pts</span></div>
     <div class="tweet-text">The Robinhood Chain public testnet is live 
@@ -217,7 +210,7 @@ Start bu</div>
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#9</div>
+  <div class="tweet-rank">#8</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@dylan522p</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">65pts</span></div>
     <div class="tweet-text">4% of GitHub public commits are being authored by Claude Code right now.
@@ -227,7 +220,7 @@ While you blinked,</div>
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#10</div>
+  <div class="tweet-rank">#9</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@MoltDomains</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">65pts</span></div>
     <div class="tweet-text">.molt domains Fair Mint goes live this Thursday 
@@ -243,7 +236,7 @@ Join the whitelist  </div>
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#11</div>
+  <div class="tweet-rank">#10</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@andyyy</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">63pts</span></div>
     <div class="tweet-text">The most important names in payments in 2026 have already been established.
@@ -269,7 +262,7 @@ BVNK
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#12</div>
+  <div class="tweet-rank">#11</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@LinusEkenstam</span> <span class="tweet-cat" style="background:#3b82f6">tech</span> <span class="tweet-score">63pts</span></div>
     <div class="tweet-text">This is what Apple should have done a year ago. 
@@ -281,7 +274,7 @@ If you been following along here, you know that through the last couple of years
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#13</div>
+  <div class="tweet-rank">#12</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@lazukars</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">63pts</span></div>
     <div class="tweet-text">OpenAI and Anthropic engineers leaked a prompting technique that separates beginners from experts.
@@ -293,7 +286,7 @@ Instead of telling the AI what to do, yo</div>
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#14</div>
+  <div class="tweet-rank">#13</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@naval</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">63pts</span></div>
     <div class="tweet-text">Everyone will soon have “AI Anxiety.”</div>
@@ -301,7 +294,7 @@ Instead of telling the AI what to do, yo</div>
   </div>
 </div>
 <div class="tweet-card">
-  <div class="tweet-rank">#15</div>
+  <div class="tweet-rank">#14</div>
   <div class="tweet-body">
     <div class="tweet-meta"><span class="tweet-author">@akshay_pachaar</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">63pts</span></div>
     <div class="tweet-text">Anthropic released a 33-page guide on building Skills.
@@ -312,6 +305,14 @@ First, what are Skills?
 
 A skill is a folder that teaches Claude how to handle specific t</div>
     <a href="https://x.com/akshay_pachaar/status/2022220152910352763" target="_blank" class="tweet-link">→ View</a>
+  </div>
+</div>
+<div class="tweet-card">
+  <div class="tweet-rank">#15</div>
+  <div class="tweet-body">
+    <div class="tweet-meta"><span class="tweet-author">@WatcherGuru</span> <span class="tweet-cat" style="background:#ef4444">stocks_macro</span> <span class="tweet-score">63pts</span></div>
+    <div class="tweet-text">JUST IN: Odds of Coinbase $COIN beating quarterly earnings surge to 73%</div>
+    <a href="https://x.com/WatcherGuru/status/2020917292138111013" target="_blank" class="tweet-link">→ View</a>
   </div>
 </div>
 
