--- a/index.html
+++ b/index.html
@@ -48,12 +48,17 @@
             font-size: 0.85em;
         }
         footer a { color: #1d9bf0; text-decoration: none; }
+        .weekly { border-color: #58a6ff; background: linear-gradient(135deg, #1a1a2e, #16213e); }
+        .weekly:hover { border-color: #79b8ff; }
+        .section-label { color: #71767b; font-size: 0.8em; text-transform: uppercase; letter-spacing: 1px; margin: 24px 0 8px; }
     </style>
 </head>
 <body>
     <div class="logo"><img src="icon-192.png" alt="Signal Monitor"></div>
     <h1>Signal Monitor</h1>
     <p class="subtitle">Timeline digest by <a href="https://x.com/beto_neh" style="color: #1d9bf0;">@beto_neh</a></p>
+    <ul><li class="weekly"><a href="weekly/2026-W07.html">📡 Weekly Report — 2026-W07<br><span class="date">2026-W07</span></a></li></ul>
+    <p class="section-label">Daily Reports</p>
     <ul>
         <li><a href="2026-02-14-0800.html">February 14, 2026 at 08:00 AM<br><span class="date">2026-02-14-0800</span></a></li><li><a href="2026-02-13-2001.html">February 13, 2026 at 08:01 PM<br><span class="date">2026-02-13-2001</span></a></li><li><a href="2026-02-13-0800.html">February 13, 2026 at 08:00 AM<br><span class="date">2026-02-13-0800</span></a></li><li><a href="2026-02-12-2000.html">February 12, 2026 at 08:00 PM<br><span class="date">2026-02-12-2000</span></a></li><li><a href="2026-02-12-0800.html">February 12, 2026 at 08:00 AM<br><span class="date">2026-02-12-0800</span></a></li><li><a href="2026-02-11-2000.html">February 11, 2026 at 08:00 PM<br><span class="date">2026-02-11-2000</span></a></li><li><a href="2026-02-11-0922.html">February 11, 2026 at 09:22 AM<br><span class="date">2026-02-11-0922</span></a></li><li><a href="2026-02-11-0906.html">February 11, 2026 at 09:06 AM<br><span class="date">2026-02-11-0906</span></a></li><li><a href="2026-02-11-0800.html">February 11, 2026 at 08:00 AM<br><span class="date">2026-02-11-0800</span></a></li><li><a href="2026-02-10-2301.html">February 10, 2026 at 11:01 PM<br><span class="date">2026-02-10-2301</span></a></li><li><a href="2026-02-10-2000.html">February 10, 2026 at 08:00 PM<br><span class="date">2026-02-10-2000</span></a></li><li><a href="2026-02-10-0800.html">February 10, 2026 at 08:00 AM<br><span class="date">2026-02-10-0800</span></a></li><li><a href="2026-02-09-2006.html">February 09, 2026 at 08:06 PM<br><span class="date">2026-02-09-2006</span></a></li><li><a href="2026-02-09-1229.html">February 09, 2026 at 12:29 PM<br><span class="date">2026-02-09-1229</span></a></li><li><a href="2026-02-09-1017.html">February 09, 2026 at 10:17 AM<br><span class="date">2026-02-09-1017</span></a></li>
     </ul>
